# Insect-Classifier

./: README.md  classes.csv  classes.txt  classes_lps.csv  evaluate.py  insect_checkpoint.py  pyproject.toml  test_inference.py
classification/: README.md
